k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager-db
  template:
    metadata:
      labels:
        app: taskmanager-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          emptyDir: {}
